--- a/ObjectPoolTests/ObjectPoolTests.csproj
+++ b/ObjectPoolTests/ObjectPoolTests.csproj
@@ -56,7 +56,7 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
-    <Compile Include="ObjectPool\RefCounterTests.cs" />
+    <Compile Include="ObjectPool\ObjectAllocatorTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
